# caide-cpp-inliner

./: .travis.yml
src/: CMakeLists.txt
tests/cases/stl/: clangOptions.txt
travis/: build-and-test.sh
travis/cmake/3.8/: LLVMExports-relwithdebinfo.cmake
travis/cmake/4.0/: ClangTargets-relwithdebinfo.cmake  LLVMExports-relwithdebinfo.cmake
